--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "rollup": "^1.29.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "game.js"
   },
   "author": "",
   "license": "ISC"
