--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "node": "^13.5.0",
     "socket.io": "^2.3.0"
   },
+  "engines": {
+      "node": "4.1.x"
+  },
   "devDependencies": {
     "rollup": "^1.29.0"
   },
